--- a/css/gg.css
+++ b/css/gg.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   nanjiao
-* @Last Modified time: 2018-09-09 14:36:33
+* @Last Modified by:   xiaojiejieJ
+* @Last Modified time: 2018-09-11 11:54:13
 */
 *{
     margin: 0;
@@ -101,11 +101,11 @@
 	text-align: center;
 	line-height: 40px;
 }
-/* .Nxxk .active{
+.Nxxk .active{
 	background: #ECF2FC;
 	color: #4381E6;
 	border-right: 2px solid #4381E6;
-} */
+} 
 .Nxxk ul li:hover{
 	background: #ECF2FC;
 	color: #4381E6;
