--- a/css/xuexiziliao.css
+++ b/css/xuexiziliao.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   nanjiao
-* @Last Modified time: 2018-09-09 10:34:06
+* @Last Modified by:   xiaojiejieJ
+* @Last Modified time: 2018-09-11 11:56:18
 */
 *{
     margin: 0;
@@ -105,6 +105,11 @@ h2,h3{
 	line-height: 40px;
 }
 .Nxxk .active{
+	background: #ECF2FC;
+	color: #4381E6;
+	border-right: 2px solid #4381E6;
+}
+.Nxxk ul li:hover{
 	background: #ECF2FC;
 	color: #4381E6;
 	border-right: 2px solid #4381E6;
