--- a/css/xxxq.css
+++ b/css/xxxq.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   Dell
-* @Last Modified time: 2018-09-10 17:54:12
+* @Last Modified by:   xiaojiejieJ
+* @Last Modified time: 2018-09-11 11:57:44
 */
 *{
     margin: 0;
@@ -98,6 +98,11 @@
 	list-style: none;
 }
 .Nxxk .active{
+	background: #ECF2FC;
+	color: #4381E6;
+	border-right: 2px solid #4381E6;
+}
+.Nxxk ul li:hover{
 	background: #ECF2FC;
 	color: #4381E6;
 	border-right: 2px solid #4381E6;
