--- a/css/xuexiziliao.css
+++ b/css/xuexiziliao.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   xiaojiejieJ
-* @Last Modified time: 2018-09-11 11:56:18
+* @Last Modified by:   Dell
+* @Last Modified time: 2018-09-11 17:19:53
 */
 *{
     margin: 0;
@@ -249,6 +249,7 @@ button{
 	border-radius: 4px;
 }
 .Cyj_bottom ul li:nth-child(5){
+	width: 40px;
 	line-height: 40px;
 	text-align: center;
 }
