--- a/css/usermanage.css
+++ b/css/usermanage.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   xiaojiejieJ
-* @Last Modified time: 2018-09-11 11:55:49
+* @Last Modified by:   Dell
+* @Last Modified time: 2018-09-11 17:19:17
 */
 * {
     margin: 0;
@@ -403,6 +403,49 @@
     color: rgba(0, 0, 0, 0.4);
     text-align: center;
     font-weight: bold;
+}
+.Cyj_bottom{
+    color: rgba(0, 0, 0, 0.4);
+}
+.Cyj_bottom ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:40px 20px;
+    box-sizing: border-box;
+}
+/*.Cyj_bottom ul li{*/
+    /*line-height: 30px;*/
+    /**/
+/*}*/
+.Cyj_bottom ul li{
+    width:29px;
+    height:29px;
+    /*background-color: #4381E6;*/
+    /*color:#fff;*/
+    text-align: center;
+    line-height: 29px;
+    border:1px solid #f4f4f4;
+    margin:0 8px;
+    /*padding:0 10px;*/
+    border-radius: 4px;
+}
+.Cyj_bottom ul li:nth-child(5){
+    width: 40px;
+    line-height: 40px;
+    text-align: center;
+}
+.Cyj_bottom ul .Cyj_one{
+    width:89px;
+    height:29px;
+    line-height: 29px;
+    text-align: center;
+}
+.Cyj_bottom ul .Cyj_two{
+    width:81px;
+    height:29px;
+    line-height: 29px;
+    text-align: center;
 }
 
 .GZC_table .page {
