--- a/css/xxzl.css
+++ b/css/xxzl.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   xiaojiejieJ
-* @Last Modified time: 2018-09-11 11:57:54
+* @Last Modified by:   Dell
+* @Last Modified time: 2018-09-11 14:10:29
 */
 *{
     margin: 0;
@@ -97,11 +97,6 @@
 	line-height: 40px;
 }
 .Nxxk .active{
-	background: #ECF2FC;
-	color: #4381E6;
-	border-right: 2px solid #4381E6;
-}
-.Nxxk ul li:hover{
 	background: #ECF2FC;
 	color: #4381E6;
 	border-right: 2px solid #4381E6;
