--- a/css/jqgl.css
+++ b/css/jqgl.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   xiaojiejieJ
-* @Last Modified time: 2018-09-11 11:20:22
+* @Last Modified by:   我的文档
+* @Last Modified time: 2018-09-12 10:05:53
 */
 *{
     margin: 0;
@@ -302,8 +302,8 @@ button{
 	margin-left: 22px;
 }
 .lss_cover{
-	width: 1366px;
-	height: 768px;
+	width: 100%;
+	height:100%;
 	position: fixed;
 	top: 0;
 	left: 0;
