--- a/css/goumai1.css
+++ b/css/goumai1.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   xiaojiejieJ
-* @Last Modified time: 2018-09-11 11:54:22
+* @Last Modified by:   Administrator
+* @Last Modified time: 2018-09-12 10:04:16
 */
 *{
     margin: 0;
@@ -102,11 +102,6 @@
 	line-height: 40px;
 }
 .Nxxk .active{
-	background: #ECF2FC;
-	color: #4381E6;
-	border-right: 2px solid #4381E6;
-}
-.Nxxk ul li:hover{
 	background: #ECF2FC;
 	color: #4381E6;
 	border-right: 2px solid #4381E6;
@@ -284,7 +279,9 @@
 	
 	
 }
-.Mwd_content .submit input{
+
+
+.Mwd_content .submit button{
 	display: block;
     margin: 20px 86px;
     width: 111px;
@@ -298,8 +295,6 @@
     text-align: center;
 
 }
-
-
 
 
 
