--- a/css/goumai2.css
+++ b/css/goumai2.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   xiaojiejieJ
-* @Last Modified time: 2018-09-11 11:54:56
+* @Last Modified by:   Administrator
+* @Last Modified time: 2018-09-10 18:34:22
 */
 *{
     margin: 0;
@@ -360,11 +360,6 @@ html,body{
 	line-height: 40px;
 }
 .Nxxk .active{
-	background: #ECF2FC;
-	color: #4381E6;
-	border-right: 2px solid #4381E6;
-}
-.Nxxk ul li:hover{
 	background: #ECF2FC;
 	color: #4381E6;
 	border-right: 2px solid #4381E6;
