--- a/css/goumai2.css
+++ b/css/goumai2.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   xiaojiejieJ
-* @Last Modified time: 2018-09-11 11:54:56
+* @Last Modified by:   Administrator
+* @Last Modified time: 2018-09-12 19:28:03
 */
 *{
     margin: 0;
@@ -268,8 +268,6 @@ html,body{
 
 
 
-
-
 .Ndhz{
 	width: 1366px;
 	/* height: 768px; */
@@ -353,8 +351,9 @@ html,body{
 .Nxxk ul li{
 	width: 100%;
 	height: 40px;
-	border-top: 1px solid #F1F4F9;
-	border-bottom: 1px solid #F1F4F9;
+	border-top: 0.3px solid #F4F4F4;
+	border-bottom: 0.3px solid #F4F4F4;
+	border-right: 2px solid white;
 	color: #8D8D8D;
 	text-align: center;
 	line-height: 40px;
@@ -363,6 +362,12 @@ html,body{
 	background: #ECF2FC;
 	color: #4381E6;
 	border-right: 2px solid #4381E6;
+}
+.Nxxk .active a{
+	color: #4381E6;
+}
+.Nxxk ul li a{
+	color: #8D8D8D;
 }
 .Nxxk ul li:hover{
 	background: #ECF2FC;
@@ -503,12 +508,36 @@ html,body{
 .checkbox{
 	padding: 0 83px;
 }
-.checkbox h2{
-	font-size: 14px;
-}
+
 .checkbox input{
 	margin: 14px 8px;
 }
+
+.checkbox h2{
+	font-size: 14px;
+	
+	display: block;
+    width: 100%;
+    height: 32px;
+    padding: 5px;
+}
+
+
+.checkbox input{
+    width: 15px;
+    height: 15px;
+    margin: 10px 6px 0 15px;
+    background-color: #fff;
+    -webkit-appearance:none;/*清除复选框的样式*/
+    border: 1px solid #ececec;
+    border-radius: 4px;
+    outline: none;
+}
+.checkbox input:checked{
+    background: url("../img/3.png")no-repeat top;
+    background-size: 100% 100%;
+}
+
 .Mwd_bottom{
 	display: flex;
 	margin: 20px 24px 0 8px;
