--- a/css/gg - zyx1.css
+++ b/css/gg - zyx1.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   xiaojiejieJ
-* @Last Modified time: 2018-09-11 11:53:50
+* @Last Modified by:   Dell
+* @Last Modified time: 2018-09-12 21:22:42
 */
 *{
     margin: 0;
@@ -37,6 +37,12 @@
     margin-right: 10px;
 	margin-top: 10px; 
 	float: left;
+}
+.Nxxk .active a{
+	color: #4381E6;
+}
+.Nxxk ul li a{
+	color: #8D8D8D;
 }
 .Nz {
 	width: 160px;
