--- a/css/gg.css
+++ b/css/gg.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   xiaojiejieJ
-* @Last Modified time: 2018-09-11 11:54:13
+* @Last Modified by:   Dell
+* @Last Modified time: 2018-09-12 21:08:40
 */
 *{
     margin: 0;
@@ -48,6 +48,12 @@
   font-size: 18px;
   color: white;
   /* font-family: 黑体; */
+}
+.Nxxk .active a{
+	color: #4381E6;
+}
+.Nxxk ul li a{
+	color: #8D8D8D;
 }
 .Np{
 	width: 190px;
