--- a/css/jqgl.css
+++ b/css/jqgl.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   我的文档
-* @Last Modified time: 2018-09-12 10:05:53
+* @Last Modified by:   Dell
+* @Last Modified time: 2018-09-12 21:11:03
 */
 *{
     margin: 0;
@@ -43,6 +43,12 @@
 	height: 30px;
 	float: right;
 	line-height: 58px;
+}
+.Nxxk .active a{
+	color: #4381E6;
+}
+.Nxxk ul li a{
+	color: #8D8D8D;
 }
 .Nz p{
   font-size: 18px;
