--- a/css/tankuang2.css
+++ b/css/tankuang2.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   xiaojiejieJ
-* @Last Modified time: 2018-09-11 11:55:33
+* @Last Modified by:   Dell
+* @Last Modified time: 2018-09-12 21:14:16
 */
 * {
     margin: 0;
@@ -49,7 +49,12 @@
     float: right;
     line-height: 58px;
 }
-
+.Nxxk .active a{
+    color: #4381E6;
+}
+.Nxxk ul li a{
+    color: #8D8D8D;
+}
 .Nz p {
     font-size: 18px;
     color: white;
