--- a/css/usermanage.css
+++ b/css/usermanage.css
@@ -2,7 +2,7 @@
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
 * @Last Modified by:   Dell
-* @Last Modified time: 2018-09-11 17:19:17
+* @Last Modified time: 2018-09-12 21:16:57
 */
 * {
     margin: 0;
@@ -48,6 +48,12 @@
     height: 30px;
     float: right;
     line-height: 58px;
+}
+.Nxxk .active a{
+    color: #4381E6;
+}
+.Nxxk ul li a{
+    color: #8D8D8D;
 }
 
 .Nz p {
