--- a/css/xuexiziliao.css
+++ b/css/xuexiziliao.css
@@ -2,7 +2,7 @@
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
 * @Last Modified by:   Dell
-* @Last Modified time: 2018-09-11 17:19:53
+* @Last Modified time: 2018-09-12 21:17:51
 */
 *{
     margin: 0;
@@ -51,6 +51,12 @@ h2,h3{
   font-size: 18px;
   color: white;
   /* font-family: 黑体; */
+}
+.Nxxk .active a{
+	color: #4381E6;
+}
+.Nxxk ul li a{
+	color: #8D8D8D;
 }
 .Np{
 	width: 190px;
