--- a/css/xxzl.css
+++ b/css/xxzl.css
@@ -2,7 +2,7 @@
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
 * @Last Modified by:   Dell
-* @Last Modified time: 2018-09-11 14:10:29
+* @Last Modified time: 2018-09-12 21:20:14
 */
 *{
     margin: 0;
@@ -37,6 +37,12 @@
 	position: relative;
 
 	top: 10px;
+}
+.Nxxk .active a{
+	color: #4381E6;
+}
+.Nxxk ul li a{
+	color: #8D8D8D;
 }
 .Nz {
 	width: 160px;
