--- a/css/fenleiguanli.css
+++ b/css/fenleiguanli.css
@@ -1,8 +1,8 @@
 /*
 * @Author: nanjiao
 * @Date:   2018-09-08 09:32:48
-* @Last Modified by:   Dell
-* @Last Modified time: 2018-09-12 21:07:24
+* @Last Modified by:   che
+* @Last Modified time: 2018-09-12 21:48:21
 */
 *{
     margin: 0;
@@ -14,6 +14,12 @@
 }
 h2,h3{
 	margin:0;
+}
+button,input{
+	outline: none;
+}
+button{
+	cursor: pointer;
 }
 .Ndhz{
 	width: 1366px;
@@ -98,27 +104,23 @@ h2,h3{
 .Nxxk ul li{
 	width: 100%;
 	height: 40px;
-	border-top: 1px solid #F1F4F9;
-	border-bottom: 1px solid #F1F4F9;
+	border-top: 0.3px solid #F4F4F4;
+	border-bottom: 0.3px solid #F4F4F4;
+	border-right: 2px solid white;
 	color: #8D8D8D;
 	text-align: center;
 	line-height: 40px;
 }
-
-
+.Nxxk .active{
+	background: #ECF2FC;
+	color: #4381E6;
+	border-right: 2px solid #4381E6;
+}
 .Nxxk .active a{
 	color: #4381E6;
 }
 .Nxxk ul li a{
 	color: #8D8D8D;
-}
-
-
-
-.Nxxk .active{
-	background: #ECF2FC;
-	color: #4381E6;
-	border-right: 2px solid #4381E6;
 }
 .Nxxk ul li:hover{
 	background: #ECF2FC;
@@ -260,7 +262,6 @@ button{
 	border-radius: 4px;
 }
 .Cyj_bottom ul li:nth-child(5){
-	width: 40px;
 	line-height: 40px;
 	text-align: center;
 }
@@ -295,6 +296,23 @@ button{
 	box-sizing: border-box;
 	display:none;
 }
+.checkbox{
+    width: 15px;
+    height: 15px;
+    margin-left: 15px;
+    margin-right: 6px;
+    margin-top: 3px;
+    background-color: #fff;
+    -webkit-appearance:none;/*清除复选框的样式*/
+    border: 1px solid #ececec;
+    border-radius: 4px;
+    outline: none;
+}
+.checkbox:checked{
+    background: url("../img/3.png")no-repeat top;
+    background-size: 100% 100%;
+}
+
 .Cyj_zhezhao h2{
 	text-align: center;
 	margin-top:23px;
@@ -351,7 +369,7 @@ button{
 	margin-left:14px;
 }
 .Cyj_zhezhao input{
-	width:246px;
+	width:200px;
 	height:29px;
 	margin-left:8px;
 	border:1px solid #f4f4f4;
