--- a/css/usermanage.css
+++ b/css/usermanage.css
@@ -92,7 +92,7 @@
 
 }
 
-.Nxxk {
+.Nxxk{
     width: 182px;
     height: 630px;
     float: left;
@@ -100,22 +100,27 @@
     /* box-shadow: 0 0 0 1px #E7EAEF; */
 
 }
-
-.Nxxk ul li {
+.Nxxk ul li{
     width: 100%;
     height: 40px;
-    border-top: 1px solid #F1F4F9;
-    border-bottom: 1px solid #F1F4F9;
+    border-top: 0.3px solid #F4F4F4;
+    border-bottom: 0.3px solid #F4F4F4;
+    border-right: 2px solid white;
     color: #8D8D8D;
     text-align: center;
     line-height: 40px;
 }
-
-.Nxxk .active {
+.Nxxk .active{
     background: #ECF2FC;
     color: #4381E6;
     border-right: 2px solid #4381E6;
-} 
+}
+.Nxxk .active a{
+    color: #4381E6;
+}
+.Nxxk ul li a{
+    color: #8D8D8D;
+}
 .Nxxk ul li:hover{
     background: #ECF2FC;
     color: #4381E6;
@@ -217,6 +222,7 @@
     border-radius: 4px;
     outline: none;
     border: none;
+    cursor: pointer;
 }
 
 .GZC_big-box .choose {
@@ -304,6 +310,7 @@
     border: none;
     outline: none;
     font-size: 14px;
+    cursor: pointer;
 }
 
 .GZC_table .row .dr .return {
@@ -316,6 +323,7 @@
     border: none;
     outline: none;
     font-size: 14px;
+    cursor: pointer;
 }
 
 .GZC_table .form {
@@ -333,6 +341,24 @@
     font-weight: bold;
 }
 
+.GZC_table .form1 .b9 .d{
+    width: 82px;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right:0;
+    margin: auto;
+    font-size: 12px;
+    border:none;
+    outline: none;
+    color:rgba(0,0,0,0.4);
+}
 .GZC_table .form .b1 {
     width: 60px;
     border-right: none;
@@ -351,6 +377,7 @@
     right: 0;
     bottom: 0;
     margin: auto;
+    cursor: pointer;
 }
 
 .GZC_table .form .b2 {
@@ -448,107 +475,6 @@
     text-align: center;
 }
 
-.GZC_table .page {
-    margin: 0 auto;
-    background-color: white;
-    padding-top: 50px;
-    padding-bottom: 50px;
-
-}
-
-.GZC_table .page .fenye {
-    width: 522px;
-    height: 30px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-}
-
-.GZC_table .page .fenye span {
-    color: rgba(0, 0, 0, 0.4);
-    line-height: 42px;
-}
-
-.GZC_table .page .fenye .on {
-    width: 96px;
-    line-height: 30px;
-    text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.4);
-    border-radius: 4px;
-    border: 1px solid #f4f4f4;
-}
-
-.GZC_table .page .fenye .down {
-    width: 96px;
-    line-height: 30px;
-    text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.4);
-    border-radius: 4px;
-    border: 1px solid #f4f4f4;
-}
-
-.GZC_table .page .fenye .end {
-    width: 80px;
-    line-height: 30px;
-    text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.4);
-    border-radius: 4px;
-    border: 1px solid #f4f4f4;
-}
-
-.GZC_table .page .fenye .one {
-    width: 30px;
-    line-height: 30px;
-    text-align: center;
-    font-size: 14px;
-    color: white;
-    border-radius: 4px;
-    border: 1px solid #f4f4f4;
-    background-color: #4381e6;
-}
-
-.GZC_table .page .fenye .two {
-    width: 30px;
-    line-height: 30px;
-    text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.4);
-    border-radius: 4px;
-    border: 1px solid #f4f4f4;
-}
-
-.GZC_table .page .fenye .three {
-    width: 30px;
-    line-height: 30px;
-    text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.4);
-    border-radius: 4px;
-    border: 1px solid #f4f4f4;
-}
-
-.GZC_table .page .fenye .nine {
-    width: 30px;
-    line-height: 30px;
-    text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.4);
-    border-radius: 4px;
-    border: 1px solid #f4f4f4;
-}
-
-.GZC_table .page .fenye .ten {
-    width: 30px;
-    line-height: 30px;
-    text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.4);
-    border-radius: 4px;
-    border: 1px solid #f4f4f4;
-}
 
 .Nzhong .Nwu {
     width: 80px;
@@ -556,7 +482,6 @@
     margin-left: 30px;
     padding-top: 20px;
     display: flex;
-
 }
 
 .Nzhong .Nwu b {
@@ -633,3 +558,199 @@
     line-height: 70px;
     z-index: 999;
 }
+
+.tk {
+    width: 394px;
+    height: 192px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-color: white;
+    border-radius: 4px;
+    box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.7);
+    z-index: 999;
+    display: none;
+
+}
+
+.tk .title {
+    border-bottom: 1px solid #f4f4f4;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.tk .title .head {
+    width: 354px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.tk .title .head .left {
+    font-size: 14px;
+    line-height: 40px;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.tk .title .head .close {
+    width: 12px;
+    height: 12px;
+    line-height: 40px;
+    cursor: pointer;
+}
+
+.tk .title .head .close img {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.tk .row-one {
+    width: 290px;
+    display: flex;
+    margin:0 auto;
+    margin-top: 28px;
+}
+.tk .row-one.two{
+    margin-top: 20px;
+}
+.tk .row-one .dot {
+    background-color: #ffbe22;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    color: white;
+    font-size: 8px;
+    line-height: 10px;
+    text-align: center;
+    margin-top: 9px;
+    margin-right: 6px;
+}
+
+.tk .row-one .word {
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.4);
+    margin-right: 18px;
+    text-align: center;
+    line-height: 30px;
+}
+
+.tk .row-one .download {
+    width: 82px;
+    line-height: 30px;
+    text-align: center;
+    background-color: #4381e6;
+    color: white;
+    border-radius: 4px;
+    font-size: 14px;
+    border:none;
+    outline: none;
+    cursor: pointer;
+}
+
+
+.tk1 {
+    width: 324px;
+    height: 436px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    background-color: white;
+    border-radius: 4px;
+    box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.7);
+    z-index: 999;
+    display: none;
+}
+
+.tk1 .title {
+    border-bottom: 1px solid #f4f4f4;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.tk1 .title .head {
+    width: 284px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+}
+
+.tk1 .title .head .left {
+    font-size: 14px;
+    line-height: 40px;
+    color: rgba(0, 0, 0, 0.6);
+    font-weight: bolder;
+}
+
+.tk1 .title .head .close {
+    width: 12px;
+    height: 12px;
+    line-height: 40px;
+    cursor: pointer;
+}
+
+.tk1 .title .head .close img {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+.tk1 .loadname{
+    width: 248px;
+    margin:0 auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top:26px;
+}
+.tk1 .loadname .left{
+    font-size: 14px;
+    line-height: 30px;
+    color: rgba(0,0,0,0.4);
+    font-weight: bold;
+}
+.tk1 .loadname input{
+    width: 176px;
+    outline: none;
+    border-radius: 4px;
+    border:1px solid #f4f4f4;
+}
+.tk1 .bb{
+    margin-top: 14px;
+}
+.tk1 .ending{
+    width: 180px;
+    display: flex;
+    justify-content: space-between;
+    margin:0 auto;
+    margin-top: 26px;
+}
+.tk1 .ending .save{
+    width: 82px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    color: white;
+    background-color: #4381E6;
+    border-radius: 4px;
+    font-size: 14px;
+    cursor: pointer;
+}
+.tk1 .ending .cannle{
+    width: 82px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    color: rgba(0,0,0,0.4);
+    border:1px solid #f4f4f4;
+    border-radius: 4px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
